[package]
name = "opendht"
version = "0.5.1"
authors = ["Manuel Schölling <manuel.schoelling@gmx.de>"]
build = "build.rs"
edition = "2024"
description = "A Rust API for OpenDHT"
license = "GPL-3.0"
documentation = "https://docs.rs/opendht"
repository = "https://github.com/manuels/opendht"
readme = "README.md"

[[example]]
name = "dht"

[build-dependencies]
cc = "1.2"
pkg-config = "0.3"
cmake = "0.1"

[dependencies]
libc = "0.2"
nix = {version = "0.31", features = ["socket", "net"]}
ring = "0.17"
futures = "0.3"

[dev-dependencies]
async-std = {version = "1.13.0"}
